--- a/firstproject/.vscode/settings.json
+++ b/firstproject/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-    "java.dependency.syncWithFolderExplorer": true,
-    "java.dependency.packagePresentation": "flat"
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    }
 }
